# RIS_gravity_inversion

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  Nagy_prisms_inversion.ipynb  README.md  RIS_gravity_data.ipynb  RIS_inversion.ipynb  env.yml  environment.yml  github_issue.txt  gmt.history  grav_column_der.py  grav_inv.yml  gravity_processing_notes.md  harmonica_inversion_grav_column_der.ipynb  harmonica_inversion_just_forward.ipynb  ice_firn_forward_modelling.ipynb  ice_shelf_gravity_stats.csv  ipython_cell_input.py  prepare_grids.ipynb  progress_bar.ipynb  progress_test.py  pyproject.toml  setup.cfg  setup.py  tmp.nc  tmp_grav.nc  tmp_mask.nc  viztracer_report.json
.github/workflows/: format.yml  test.yml
.ipynb_checkpoints/: RIS_inversion-checkpoint.ipynb
Fatiando/: bed_100km  bed_100km.nc  fatiando_inversion.ipynb  forward_grav_prism_layer_South_Africa.ipynb  forward_layers_bedmachine.ipynb  forward_layers_bedmachine_progressbar.ipynb  forward_layers_bedmap.ipynb  gmt.history  grav_column_der.py  gravity-processing.ipynb  harmonica_progressbar_test.py
Fatiando/.ipynb_checkpoints/: forward_layers_bedmachine-checkpoint.ipynb
Nagy_inversion/Nagy_GUI_original/: !READ_ME.txt  bvls.py  grav_column_der.py  gravbox.py  gridding.py  lsq_linear.py  sample_RIS_gravity_10000m.XYZ  sample_RIS_icebase_10000m.XYZ  sample_RIS_waterbase_10000m.XYZ  sample_geometry.py  sample_inversion_logic.py  setup.py  trf_linear.py
Nagy_inversion/Nagy_GUI_updated/: !READ_ME.txt  Fabio_grav_bathy_inversion.py  Inversion_Notes.txt  ROSETTA_gravity.csv  Saved_Input_Files.csv  fabio_save_output_file  grav_bathy_inversion.ipynb  grav_bathy_inversion.py  grav_bathy_inversion_Nagy_testing.py  prep_csvs.ipynb  simple_inversion.py  test.py
RIS_gravity_inversion/: gravity_processing.py  inversion.py  optimization.py  plotting.py  regional.py  synthetic.py  uncertainties.py  utils.py
RIS_gravity_inversion/RIS_gravity_inversion.egg-info/: PKG-INFO  SOURCES.txt
RIS_gravity_inversion/tests/: test_inversion.py  test_optimization.py  test_plotting.py  test_regional.py  test_synthetic.py  test_utils.py
bathymetry_data/: bedmachine_clip_5k.nc  bedmap_bed_RIS.csv  bedmap_clip.nc
constraints_grid/: constraints_grid.nc  constraints_grid_resample.nc  constriants_grid.ipynb
constraints_grid.zarr/: .zmetadata
constraints_grid.zarr/spatial_ref/: .zattrs
env/: env_test.yml  environment.yml
gravity_data/: K863_DD_2feb22.csv  K863_KIS.csv  ROSETTA_gravity.nc  ant4d_gravity.nc  rosetta.nc  rosetta_eq_source_up_continued.csv  rosetta_eq_source_up_continued.nc  rosetta_eq_source_up_continued_Gobs.nc  rosetta_eq_source_up_continued_elev.nc  rosetta_eq_source_up_continued_gridline.nc  rosetta_grav.nc  rosetta_height.nc  wgz_fa.csv
inversion_layers/: AN1-MOHO.nc  ANTASed_basement_buffer.nc  ANTASed_basement_buffer_mask.nc  ANTASed_mag_basement.nc  ANTASed_mag_basement.nc.aux.xml  ANTASed_mag_basement_filled.nc  ANTASed_mag_basement_filled.nc.aux.xml  ANTASed_mag_basement_merged.nc  ANTASed_magnetics_merged_basement.nc  An_moho.nc  An_moho_filt.nc  BedMachine_bed_inv.nc  BedMachine_icebase_filled_inv.nc  BedMachine_surface_filled_inv.nc  Pappa_moho.nc  RE_basement_BedMachinebed.nc  RE_basement_BedMachinebed.nc.aux.xml  RE_basement_BedMachinebed_filled.nc  RE_basement_BedMachinebed_filled.nc.aux.xml  RE_basement_buffer.nc  RE_basement_buffer_mask.nc  RIS_layer_prep.ipynb  RIS_mask.nc  ROSETTA_basement_BedMachine_bed_20k.nc  ROSETTA_basement_BedMachine_bed_inv.nc  Ross_Embayment_basement_filt.nc  Ross_Embayment_basement_filt_resample.nc  Ross_Embayment_basement_filt_resample.nc.aux.xml  Shen_moho.nc  base_RIS_gravity_10000m_lr.nc  base_RIS_ice_10000m_lr.nc  base_RIS_layer1_10000m_lr.XYZ  base_RIS_layer1_10000m_lr.nc  base_RIS_layer2_20000m_lr.XYZ  base_RIS_layer2_20000m_lr.nc  base_RIS_water_10000m_lr.nc  bathy_control_points.nc  bed_basement_merged.nc  bedmap2_surface_filled_RIS_5k.nc  constraints_distances.nc  (+12 more)
notebooks/: Nagy_prisms_inversion.ipynb  RIS_gravity_reduction.ipynb  RIS_inv_comparison.ipynb  RIS_montecarlo_uncert_constraints.ipynb  RIS_montecarlo_uncert_gravity.ipynb  RIS_montecarlo_uncertainties.ipynb  RIS_outline.ipynb  ROSETTA_levelling.ipynb  Ross_Sea_montecarlo_uncertainties.ipynb  absolute_vs_density_contrast_no_ant_plots.ipynb  bootstrap_RIS_constraints.ipynb  bootstrap_RIS_gravity.ipynb  bootstrap_RIS_gravity_incl_regional.ipynb  buffer_zone.ipynb  buffer_zone_treemesh.ipynb  constraints_grid.ipynb  constriants_grid.ipynb  density_contrast.ipynb  density_contrast_1surface.ipynb  density_contrast_2surfaces.ipynb  density_contrast_3surfaces.ipynb  density_contrast_complex.ipynb  density_contrast_intersecting_zrefs.ipynb  eq_sources_optimization.ipynb  ice_shelf_constraint_density.ipynb  prism_resolution.ipynb  solver_comparison.ipynb  synthetic.ipynb  synthetic_inversion_2layer.ipynb  synthetic_inversion_complex.ipynb  synthetic_inversion_simple.ipynb  synthetic_inversion_simple_2layer.ipynb  synthetic_inversion_simple_dens_contrast.ipynb  synthetic_inversion_simple_with_regional.ipynb  synthetic_model_simple_2layer.ipynb
paper/: _bathy_methods_refs.bib
plotting/: CIR_profile.csv  MEaSUREs_RIS.dbf  MEaSUREs_RIS.shp  MEaSUREs_RIS.shx  RIGGS_mask.nc  RIS_GL_clip.nc  RIS_GL_mask_inner.nc  RIS_GL_mask_outer.nc  RIS_bathy.cpt  RIS_grav.cpt  RIS_mask.nc  RIS_outline.dbf  RIS_outline.prj  RIS_outline.shp  RIS_outline.shx  RI_calving_front_to_CIR_profile.csv  bathy_fig_labels.tsv  calving_front_profile.csv  calving_front_to_byrd_profile.csv  corr.cpt  dens.cpt  dens_corr.cpt  dens_update.cpt  diff.cpt  disco_deep_traverse_profile.csv  elevations.cpt  fig_labels_no_bathy_features.tsv  forward.cpt  grav.cpt  grounding_line_profile.csv  groundingline_profile.csv  layer.cpt  minna_bluff_to_byrd_profile.csv  misfit.cpt  surface.cpt  surface_corr.cpt  tmp.cpt  tmp.txt  tmp2.cpt  tmp3.cpt  (+2 more)
results/: initial_residual.nc  initial_residual_5k_constraints_base.nc  inverted_topo.nc  inverted_topo_5k_constraints_base.nc  inverted_topo_5k_constraints_no_base.nc
scripts/: grav_column_der.py  gravbox.py
(+898 files in other folders)
