[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RIS_gravity_inversion"
version = "0.0.2"
description = "Gravity inversion for sub-Ross Ice Shelf bathymetry"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Matthew Tankersley", email = "matt.d.tankersley@gmail.com"},
]
keywords = ["geophysics", "gravity", "inversion", "bathymetry", "antarctica"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]

dependencies = [
    "polartoolkit[all]>=0.5.1",
    "invert4geom>=0.8.1",
    "matplotlib",
    "numpy",
    "scipy",
    "cmocean",
    "pandas",
    "plotly",
    "pyvista",
    "seaborn",
    "verde",
    "geopandas<1.0",
    "pygmt",
    "shapely",
    "scikit-learn",
    "optuna",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit",
  "pylint>=3.2",
  "ipykernel",
  "jupyterlab",
]

[project.urls]
repository = "https://github.com/mdtanker/RIS_gravity_inversion"

[tool.flake8]
max-line-length = 88
