[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RIS_gravity_inversion"
version = "0.0.2"
description = "Gravity inversion for sub-Ross Ice Shelf bathymetry"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Matthew Tankersley", email = "matt.d.tankersley@gmail.com"},
]
keywords = ["geophysics", "gravity", "inversion", "bathymetry", "antarctica"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]

dependencies = [
    "polartoolkit[all]>=0.6",
    "invert4geom>=0.11",
    "shapely",
    "requests",
    "xesmf",
    "ensaio",
    "pyvista-xarray",
    "boule",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pylint>=3.2",
  "ipykernel",
  "jupyterlab",
]

[project.urls]
repository = "https://github.com/mdtanker/RIS_gravity_inversion"

[tool.ruff]
lint.select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
lint.ignore = [
  "PLR",    # Design related pylint codes
  "G004",   # Logging with f-strings
  "PD901",  # Bad variable name warning
  "PD003", # Changes .isna to .isnull
  "PD004", # Changes .notna to .notnull
  "PD011", # Changes .values() to .to_numpy()
  "ISC001", # Implicit string concatenation
  "C408", # Unnecessary dict call
  "T201", # `print` found
]
src = ["src"]
lint.unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
  "PD003", # Changes .isna to .isnull
  "PD004", # Changes .notna to .notnull
  "PD011", # Changes .values() to .to_numpy()
]
line-length = 88 # Set the maximum line length to 88.
lint.flake8-unused-arguments.ignore-variadic-names = true
lint.isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["invert4geom._compat.typing"]
extend-include = ["*.ipynb"]
[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E501", "E402", "B018", "T201", "C408", "E712",]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = true

[tool.pylint]
py-version = "3.9"
# ignore-patterns = [".*.md", "notebooks/misc_notebooks/"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
similarities.min-similarity-lines = 5
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
  "cyclic-import",
]
