[metadata]
name = RIS_gravity_inversion
version = 1.0.0
author = Matt Tankersley
author_email = matt.d.tankersley@gmail.com
description = Vertical prisms structural gravity inversion
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/codasteroid/basicpkg
project_urls =
    Bug Tracker = https://github.com/mdtanker/RIS_gravity_inversion/issues
    repository = https://github.com/mdtanker/RIS_gravity_inversion
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = RIS_gravity_inversion
packages = find:
python_requires = >=3.7

[options.packages.find]
where = RIS_gravity_inversion